Fixes on plugin manager
*Fix uncentered tiptip
*Alignment equal on both sides
*Drop down in compact mode wider as it was done in theme page
*Adding title attribute when title is too long but tiptip class doesn't apply
*Adding "..." if title is too long

--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -1948,7 +1948,7 @@ h2:lang(en) { text-transform:capitalize; }
 .pluginBoxesTitle span {border-radius: 50%; margin-right: 5px; padding: 4px}
 
 .pluginBoxesTitle {display: flex;align-items: center}
-.pluginFilter {justify-content: end;position: absolute;right: 170px; z-index: 2; transform: translateY(6px);}
+.pluginFilter {justify-content: end;position: absolute;right: 130px; z-index: 2; transform: translateY(6px);}
 
 .pluginBoxesCount {
   background-color: rgb(150, 150, 150);
@@ -2003,12 +2003,9 @@ h2:lang(en) { text-transform:capitalize; }
 .pluginMiniBoxNameCellCompact {
   width: min-content;
   max-width: 170px;
-  overflow: hidden;
-  text-overflow: ellipsis;
   white-space: nowrap;
   cursor: default;
 }
-
 
 .pluginDesc {
   margin-top: 5px;
